--- a/index-git.html
+++ b/index-git.html
@@ -12,7 +12,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integracion Continua</li>
+        <li>Integracion Continua: Madurez y Producividad en el Desarrollo de Software</li>
     </ul>         
 </body>
 
