Modificando el titulo

--- a/index-git.html
+++ b/index-git.html
@@ -4,15 +4,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cursos de Alura</title>
-</head>
+    <title>Cursos de DevOps de Alura</title>
+</head><a href="" class="config"></a>
 
 <body>
     <ul>
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integracion Continua: Madurez y Producividad en el Desarrollo de Software</li>
+        <li>Integracion Continua</li>
     </ul>         
 </body>
 
