Agregando curso de kubernetes

--- a/index-git.html
+++ b/index-git.html
@@ -13,6 +13,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integracion Continua: Madurez y Producividad en el Desarrollo de Software</li>
+        <li>Kubernetes</li>
     </ul>         
 </body>
 
