--- a/index-git.html
+++ b/index-git.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos de DevOps de Alura</title>
+    <title>Lista de cursos de DevOps de Alura</title>
 </head><a href="" class="config"></a>
 
 <body>
