--- a/index-git.html
+++ b/index-git.html
@@ -9,7 +9,7 @@
 
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: gerenciando maquinas virtuales</li>
         <li>Docker: Creando containers sin dolor de cabeza</li>
         <li>Ansible</li>
         <li>Integracion Continua</li>
