--- a/index-git.html
+++ b/index-git.html
@@ -13,7 +13,7 @@
         <li>Docker: Creando containers sin dolor de cabeza</li>
         <li>Ansible</li>
         <li>Integracion Continua</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes3</li>
     </ul>         
 </body>
 
